GNOME Bugzilla – Bug 745748
liveadder: Fix memory leak
Last modified: 2015-06-10 08:25:05 UTC
liveadder neither unsets nor resets the item GValue when iterating over pads.
Created attachment 298716 [details] [review] patch generated using git format-patch
Comment on attachment 298716 [details] [review] patch generated using git format-patch This does not apply to GIT master anymore. Is there any reason why you use liveadder instead of the new audiomixer element?
I used to, those are some leaks I detected. I had no idea about the future of liveadder, any case these were my two cents for all those who still want to use liveadder even though it's gonna be deprecated.
In audiomixer comment, we can read this comment: * The audiomixer currently mixes all data received on the sinkpads as soon as * possible without trying to synchronize the streams. As I need synchonization, I still use liveadder.
> In audiomixer comment, we can read this comment: > * The audiomixer currently mixes all data received on the sinkpads as soon > as > * possible without trying to synchronize the streams. > > As I need synchonization, I still use liveadder. I don't think that comment is correct, it was just copied over from the adder documentation. audiomixer should synchronise input streams correctly.
On my side, I have few modification in liveadder to avoid starting timestamp from 0:00:00. I did not have time yet to report these modifications in audiomixer.
So is anyone going to update the patch then? :)
Created attachment 304868 [details] [review] patch from Santiago Carot-Nemesio reworked for master